<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/fragment_bg"
    android:gravity="bottom"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <Button
            android:id="@+id/delete"
            android:text="@string/delete"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
        <TextView
            android:id="@+id/phoneNum"
            android:paddingLeft="5dp"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@id/delete"
            android:layout_alignBottom="@id/delete"
            android:layout_toLeftOf="@id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="1px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/num1"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="@color/white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/num1"
            android:gravity="center"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/num2"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="@color/white"
            android:layout_marginLeft="1dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/num2"
            android:gravity="center"
            android:layout_height="wrap_content" />

        <TextView
            android:background="@color/white"
            android:id="@+id/num3"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="1dp"
            android:text="@string/num3"
            android:gravity="center"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/num4"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="@color/white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/num4"
            android:gravity="center"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/num5"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="@color/white"
            android:layout_marginLeft="1dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/num5"
            android:gravity="center"
            android:layout_height="wrap_content" />

        <TextView
            android:background="@color/white"
            android:id="@+id/num6"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="1dp"
            android:text="@string/num6"
            android:gravity="center"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/num7"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="@color/white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/num7"
            android:gravity="center"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/num8"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="@color/white"
            android:layout_marginLeft="1dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/num8"
            android:gravity="center"
            android:layout_height="wrap_content" />

        <TextView
            android:background="@color/white"
            android:id="@+id/num9"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="1dp"
            android:text="@string/num9"
            android:gravity="center"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/num0"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="@color/white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/num0"
            android:gravity="center"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/call"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="@color/white"
            android:layout_marginLeft="1dp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="@string/call"
            android:gravity="center"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>